// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caret should render correctly 1`] = `
<span
  className="caret-container"
>
  <span
    className="\\"caret-arrow\\" caret-active"
  />
</span>
`;

exports[`Caret should render correctly 2`] = `
<span
  className="caret-container"
>
  <span
    className="\\"caret-arrow\\" "
  />
</span>
`;
